# Nesmulator

./: CMakeLists.txt
TestRoms/: 1_example.txt
TestRoms/Tracelogs/: 5_Instructions1.txt  5_instructions_mylog.txt
src/: Nesmulator.hpp  TraceLogger.hpp  main.cpp
